tests/snapshots/cli__profile_list_hostile_human.snap
---
source: tests/cli.rs
expression: stdout
---
┌───────────────┬────────────┬───────┬────────────┐
│ NAME          ┆ ID         ┆ RULES ┆ UPDATED    │
╞═══════════════╪════════════╪═══════╪════════════╡
│ Evil^[[31mRed ┆ pkbadc0ffe ┆ 2     ┆ 4 days ago │
└───────────────┴────────────┴───────┴────────────┘
