tests/snapshots/cli__profile_list_plain.snap
---
source: tests/cli.rs
expression: plain
---
 NAME        ID          RULES  UPDATED    
 Aggressive  pk4cada1c5  8      4 days ago 
 Hardened    pkae1060cf  8      1 day ago  
 Kids        pk69038f3c  0      1 year ago 
 Relaxed     pkc73939ba  3      1 year ago
