tests/snapshots/cli__rule_create_dry_run_human.snap
---
source: tests/cli.rs
expression: human
---
would send: POST /profiles/pk4cada1c5/rules
hostnames  a.example.com, b.example.com
action     block
via        null
via6       null
enabled    true
folder_id  null
comment    null
